Fixed: wflow-consoleweb - Form - Comment thread misaligned. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/form.css
+++ b/wflow-consoleweb/src/main/webapp/css/form.css
@@ -774,3 +774,9 @@ body.rtl .form-edit-btn{
 .form-edit-btn.bottom{
     bottom:30px;
 }
+
+/* process enhancement comments*/
+.comments_thread .comment {
+    width: 100% !important;
+    margin-top: 20px !important;
+}
