--- a/wflow-consoleweb/src/main/webapp/css/form8.css
+++ b/wflow-consoleweb/src/main/webapp/css/form8.css
@@ -1158,3 +1158,9 @@ body.rtl .form-edit-btn{
 .form-edit-btn.bottom{
     bottom:20px;
 }
+
+/* process enhancement comments*/
+.comments_thread .comment {
+    width: 100% !important;
+    margin-top: 20px !important;
+}
